// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert a danger alert with a title and an action (ltr) 1`] = `
<div
  dir="ltr"
>
  <div
    class="flex items-start gap-3 rounded-lg border-s-4 p-4 text-sm bg-danger-surface text-danger-text border-danger"
    role="alert"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-circle-x lucide-x-circle mt-0.5 size-5 shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="m15 9-6 6"
      />
      <path
        d="m9 9 6 6"
      />
    </svg>
    <div
      class="flex flex-1 flex-col gap-2"
    >
      <p
        class="font-semibold"
      >
        ارسال نشد
      </p>
      <div
        class="leading-relaxed"
      >
        اتصال برقرار نشد.
      </div>
      <div
        class="flex flex-wrap items-center gap-2"
      >
        <button
          type="button"
        >
          تلاش دوباره
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert a danger alert with a title and an action (rtl) 1`] = `
<div
  dir="rtl"
>
  <div
    class="flex items-start gap-3 rounded-lg border-s-4 p-4 text-sm bg-danger-surface text-danger-text border-danger"
    role="alert"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-circle-x lucide-x-circle mt-0.5 size-5 shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="m15 9-6 6"
      />
      <path
        d="m9 9 6 6"
      />
    </svg>
    <div
      class="flex flex-1 flex-col gap-2"
    >
      <p
        class="font-semibold"
      >
        ارسال نشد
      </p>
      <div
        class="leading-relaxed"
      >
        اتصال برقرار نشد.
      </div>
      <div
        class="flex flex-wrap items-center gap-2"
      >
        <button
          type="button"
        >
          تلاش دوباره
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`StatusBadge one badge of each tone (ltr) 1`] = `
<div
  dir="ltr"
>
  <div>
    <span
      class="inline-flex items-center gap-1.5 rounded-full px-2.5 py-1 text-xs font-medium bg-success-surface text-success-text"
      data-status="ACTIVE"
      data-tone="success"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-check lucide-check-circle-2 size-3.5 shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="m16 9-5.5 5.5L8 12"
        />
      </svg>
      فعال
    </span>
    <span
      class="inline-flex items-center gap-1.5 rounded-full px-2.5 py-1 text-xs font-medium bg-warning-surface text-warning-text"
      data-status="PENDING_APPROVAL"
      data-tone="warning"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-triangle-alert lucide-alert-triangle size-3.5 shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
        />
        <path
          d="M12 9v4"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
      در انتظار تأیید
    </span>
    <span
      class="inline-flex items-center gap-1.5 rounded-full px-2.5 py-1 text-xs font-medium bg-danger-surface text-danger-text"
      data-status="REJECTED"
      data-tone="danger"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-ban size-3.5 shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M4.929 4.929 19.07 19.071"
        />
      </svg>
      ردشده
    </span>
    <span
      class="inline-flex items-center gap-1.5 rounded-full px-2.5 py-1 text-xs font-medium bg-info-surface text-info-text"
      data-status="IN_MAINTENANCE"
      data-tone="info"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-wrench size-3.5 shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.106-3.105c.32-.322.863-.22.983.218a6 6 0 0 1-8.259 7.057l-7.91 7.91a1 1 0 0 1-2.999-3l7.91-7.91a6 6 0 0 1 7.057-8.259c.438.12.54.662.219.984z"
        />
      </svg>
      در تعمیر
    </span>
    <span
      class="inline-flex items-center gap-1.5 rounded-full px-2.5 py-1 text-xs font-medium bg-muted-surface text-muted-text"
      data-status="DRAFT"
      data-tone="neutral"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-dashed size-3.5 shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.1 2.182a10 10 0 0 1 3.8 0"
        />
        <path
          d="M13.9 21.818a10 10 0 0 1-3.8 0"
        />
        <path
          d="M17.609 3.721a10 10 0 0 1 2.69 2.7"
        />
        <path
          d="M2.182 13.9a10 10 0 0 1 0-3.8"
        />
        <path
          d="M20.279 17.609a10 10 0 0 1-2.7 2.69"
        />
        <path
          d="M21.818 10.1a10 10 0 0 1 0 3.8"
        />
        <path
          d="M3.721 6.391a10 10 0 0 1 2.7-2.69"
        />
        <path
          d="M6.391 20.279a10 10 0 0 1-2.69-2.7"
        />
      </svg>
      پیش‌نویس
    </span>
  </div>
</div>
`;

exports[`StatusBadge one badge of each tone (rtl) 1`] = `
<div
  dir="rtl"
>
  <div>
    <span
      class="inline-flex items-center gap-1.5 rounded-full px-2.5 py-1 text-xs font-medium bg-success-surface text-success-text"
      data-status="ACTIVE"
      data-tone="success"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-check lucide-check-circle-2 size-3.5 shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="m16 9-5.5 5.5L8 12"
        />
      </svg>
      فعال
    </span>
    <span
      class="inline-flex items-center gap-1.5 rounded-full px-2.5 py-1 text-xs font-medium bg-warning-surface text-warning-text"
      data-status="PENDING_APPROVAL"
      data-tone="warning"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-triangle-alert lucide-alert-triangle size-3.5 shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
        />
        <path
          d="M12 9v4"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
      در انتظار تأیید
    </span>
    <span
      class="inline-flex items-center gap-1.5 rounded-full px-2.5 py-1 text-xs font-medium bg-danger-surface text-danger-text"
      data-status="REJECTED"
      data-tone="danger"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-ban size-3.5 shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M4.929 4.929 19.07 19.071"
        />
      </svg>
      ردشده
    </span>
    <span
      class="inline-flex items-center gap-1.5 rounded-full px-2.5 py-1 text-xs font-medium bg-info-surface text-info-text"
      data-status="IN_MAINTENANCE"
      data-tone="info"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-wrench size-3.5 shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.106-3.105c.32-.322.863-.22.983.218a6 6 0 0 1-8.259 7.057l-7.91 7.91a1 1 0 0 1-2.999-3l7.91-7.91a6 6 0 0 1 7.057-8.259c.438.12.54.662.219.984z"
        />
      </svg>
      در تعمیر
    </span>
    <span
      class="inline-flex items-center gap-1.5 rounded-full px-2.5 py-1 text-xs font-medium bg-muted-surface text-muted-text"
      data-status="DRAFT"
      data-tone="neutral"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-dashed size-3.5 shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.1 2.182a10 10 0 0 1 3.8 0"
        />
        <path
          d="M13.9 21.818a10 10 0 0 1-3.8 0"
        />
        <path
          d="M17.609 3.721a10 10 0 0 1 2.69 2.7"
        />
        <path
          d="M2.182 13.9a10 10 0 0 1 0-3.8"
        />
        <path
          d="M20.279 17.609a10 10 0 0 1-2.7 2.69"
        />
        <path
          d="M21.818 10.1a10 10 0 0 1 0 3.8"
        />
        <path
          d="M3.721 6.391a10 10 0 0 1 2.7-2.69"
        />
        <path
          d="M6.391 20.279a10 10 0 0 1-2.69-2.7"
        />
      </svg>
      پیش‌نویس
    </span>
  </div>
</div>
`;
